📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19814,5 +19814,125 @@
         "published": "Thu, 18 Dec 2025 13:10:00 +0000",
         "source": "MIT Technology Review",
         "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. The 8 worst technology flops of 2025 Welcome to our annual list of the worst, least successful, and simply dumbest technologies of the year. We like to think there\u2019s a lesson in every&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/amazons-new-alexa-feature-adds-conversational-ai-to-ring-doorbells/",
+        "title": "Amazon\u2019s new Alexa+ feature adds conversational AI to Ring doorbells",
+        "link": "https://techcrunch.com/2025/12/18/amazons-new-alexa-feature-adds-conversational-ai-to-ring-doorbells/",
+        "published": "Thu, 18 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Amazon said that the feature uses the Ring doorbell's video descriptions to determine who the person in front the camera is based on their uniform, actions, and what they are holding."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/847156/apple-ipad-air-m3-astro-bot-airpods-pro-deal-sale",
+        "title": "The latest iPad Air is $400 for the first time and arrives by Christmas",
+        "link": "https://www.theverge.com/gadgets/847156/apple-ipad-air-m3-astro-bot-airpods-pro-deal-sale",
+        "published": "2025-12-18T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "If you have $400 and want an iPad, your options are usually kind of limited to either just the base iPad, or better yet, the latest iPad Mini \u2014 if it happens to be on sale when you\u2019re shopping (it is now, but that\u2019s not always the case). But right now, you should consider getting [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/841054/tv-brightness-hdr-2025",
+        "title": "2025 was the beginning of the end of the TV brightness war",
+        "link": "https://www.theverge.com/tech/841054/tv-brightness-hdr-2025",
+        "published": "2025-12-18T08:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Much like the audio industry's compression-driven loudness war, which reached its distortion-fueled apex (and not the good kind) with Metallica's Death Magnetic in 2008, the television industry has been having its own battle the past couple of years: the brightness war. Sparked by the introduction of HDR and its higher brightness mastering levels, brands began [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-android-phones/",
+        "title": "9 Best Android Phones of 2025, Tested and Reviewed",
+        "link": "https://www.wired.com/gallery/best-android-phones/",
+        "published": "Thu, 18 Dec 2025 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Shopping for a phone can be an ordeal. That\u2019s why we\u2019ve tested almost every Android phone, from the smartest to the cheapest\u2014even phones that fold\u2014to find the ones worth your money."
+    },
+    {
+        "id": "https://www.wired.com/story/opposed-to-data-centers-the-working-families-party-wants-you-to-run-for-office/",
+        "title": "Opposed to Data Centers? The Working Families Party Wants You to Run for Office",
+        "link": "https://www.wired.com/story/opposed-to-data-centers-the-working-families-party-wants-you-to-run-for-office/",
+        "published": "Thu, 18 Dec 2025 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The influential progressive third party announced Thursday that it was putting out a recruitment call for candidates specifically opposed to data centers."
+    },
+    {
+        "id": "https://www.engadget.com/deals/apples-mac-mini-m4-is-on-sale-for-479-right-now-150041630.html?src=rss",
+        "title": "Apple's Mac mini M4 is on sale for $479 right now",
+        "link": "https://www.engadget.com/deals/apples-mac-mini-m4-is-on-sale-for-479-right-now-150041630.html?src=rss",
+        "published": "Thu, 18 Dec 2025 14:05:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This time of year is not only a good time to save on gifts, but also to save on tech you may need (or want) for yourself. If you've been thinking about upgrading your computer, you can save right now on <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0DLBTPDCS&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=a4b87d1c-bb4f-4033-b906-fff96c9cb013&amp;featureId=text-link&amp;merchantName=Amazon&am"
+    },
+    {
+        "id": "https://www.engadget.com/ai/openai-just-launched-an-app-store-inside-chatgpt-133049586.html?src=rss",
+        "title": "OpenAI just launched an app store inside ChatGPT",
+        "link": "https://www.engadget.com/ai/openai-just-launched-an-app-store-inside-chatgpt-133049586.html?src=rss",
+        "published": "Thu, 18 Dec 2025 13:30:58 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>OpenAI has introduced an app directory that's now available right inside ChatGPT, the company announced. &quot;Apps extend ChatGPT conversations by bringing in new context and letting users take action like order groceries, turn an outline into a slide deck or search for an apartment,&quot; the company wrote in a <a href=\"https://openai.com/index/developers-can-now-submit-apps-to-chatgpt/\">blog post</a>. OpenAI also noted in a <a href=\"https://help.openai.com/en/articles/11487775-apps-in-chat"
+    },
+    {
+        "id": "https://gizmodo.com/psst-oscar-voters-guillermo-del-toros-frankenstein-exhibit-is-coming-to-hollywood-2000701117",
+        "title": "Psst, Oscar Voters: Guillermo del Toro\u2019s \u2018Frankenstein\u2019 Exhibit Is Coming to Hollywood",
+        "link": "https://gizmodo.com/psst-oscar-voters-guillermo-del-toros-frankenstein-exhibit-is-coming-to-hollywood-2000701117",
+        "published": "Thu, 18 Dec 2025 14:00:17 +0000",
+        "source": "Gizmodo",
+        "summary": "The horror master's passion project has such lavish production design, its relics literally belong in a museum."
+    },
+    {
+        "id": "https://gizmodo.com/tramell-tillman-spider-man-brand-new-day-character-2000701097",
+        "title": "Tramell Tillman\u2019s \u2018Spider-Man: Brand New Day\u2019 Character May Have Been Revealed",
+        "link": "https://gizmodo.com/tramell-tillman-spider-man-brand-new-day-character-2000701097",
+        "published": "Thu, 18 Dec 2025 13:00:51 +0000",
+        "source": "Gizmodo",
+        "summary": "Plus, Daisy Ridley leads a swath of new stars joining Ti West's take on 'Christmas Carol'."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-fire-tv-cube-deal",
+        "title": "Upgrade your streaming setup with the Fire TV Cube \u2014 save $30 at Amazon",
+        "link": "https://mashable.com/article/dec-18-fire-tv-cube-deal",
+        "published": "Thu, 18 Dec 2025 13:00:03 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, the Fire TV Cube is discounted at Amazon to $109.99, 21% off its list price of $139.99."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-magic-the-gathering-commander-masters-play-booster-box-deal",
+        "title": "The Magic: The Gathering Commander Masters Play Booster Box is now almost $70 below market value on Amazon",
+        "link": "https://mashable.com/article/dec-18-magic-the-gathering-commander-masters-play-booster-box-deal",
+        "published": "Thu, 18 Dec 2025 12:54:37 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, Magic: The Gathering \u2014 Commander Master Play Booster Box is below market value at Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/oura-year-in-review-smart-ring-stress-data/",
+        "title": "Your Oura Ring data just got the Spotify Wrapped treatment - here's how to find it",
+        "link": "https://www.zdnet.com/article/oura-year-in-review-smart-ring-stress-data/",
+        "published": "Thu, 18 Dec 2025 14:00:00 GMT",
+        "source": "Latest news",
+        "summary": "How stressed were you in 2025? Your Oura Year in Review breaks it down."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-upgrade-old-starlink-router-for-free/",
+        "title": "Got an old Starlink router? SpaceX will upgrade it today for free - here's how",
+        "link": "https://www.zdnet.com/article/how-to-upgrade-old-starlink-router-for-free/",
+        "published": "Thu, 18 Dec 2025 13:48:27 GMT",
+        "source": "Latest news",
+        "summary": "The company is ending support for its oldest Gen 1 router - and it 'strongly recommends' upgrading ASAP."
+    },
+    {
+        "id": "https://worksinprogress.co/issue/were-classical-statues-painted-horribly/",
+        "title": "Classical statues were not painted horribly",
+        "link": "https://worksinprogress.co/issue/were-classical-statues-painted-horribly/",
+        "published": "Thu, 18 Dec 2025 12:28:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46311856\">Comments</a>"
+    },
+    {
+        "id": "https://www.ubicloud.com/blog/virtualizing-nvidia-hgx-b200-gpus-with-open-source",
+        "title": "Virtualizing Nvidia HGX B200 GPUs with Open Source",
+        "link": "https://www.ubicloud.com/blog/virtualizing-nvidia-hgx-b200-gpus-with-open-source",
+        "published": "Thu, 18 Dec 2025 14:04:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46312792\">Comments</a>"
     }
 ]
