📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -19934,5 +19934,133 @@
         "published": "Thu, 18 Dec 2025 14:04:03 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46312792\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/apple-opens-up-its-app-store-to-competition-in-japan/",
+        "title": "Apple opens up its App Store to competition in Japan",
+        "link": "https://techcrunch.com/2025/12/18/apple-opens-up-its-app-store-to-competition-in-japan/",
+        "published": "Thu, 18 Dec 2025 15:02:49 +0000",
+        "source": "TechCrunch",
+        "summary": "Epic Games CEO says Fortnite won't return to Japan, though, because the new rules still require high fees."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/trump-media-is-merging-with-fusion-power-company-tae-technologies-in-6b-deal/",
+        "title": "Trump Media is merging with fusion power company TAE Technologies in $6B+ deal",
+        "link": "https://techcrunch.com/2025/12/18/trump-media-is-merging-with-fusion-power-company-tae-technologies-in-6b-deal/",
+        "published": "Thu, 18 Dec 2025 14:59:41 +0000",
+        "source": "TechCrunch",
+        "summary": "The merger would broaden Trump Media\u2019s holdings into the nascent fusion power space while data centers clamor for more electricity amid the ongoing AI boom."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/luma-releases-a-new-ai-model-that-lets-users-generate-a-video-from-a-start-and-end-frame/",
+        "title": "Luma releases a new AI model that lets users generate a video from a start  and end frame",
+        "link": "https://techcrunch.com/2025/12/18/luma-releases-a-new-ai-model-that-lets-users-generate-a-video-from-a-start-and-end-frame/",
+        "published": "Thu, 18 Dec 2025 14:52:58 +0000",
+        "source": "TechCrunch",
+        "summary": "Luma AI's new model is available through the company's Dream Machine platform."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/vibe-coding-startup-lovable-raises-330m-at-a-6-6b-valuation/",
+        "title": "Vibe-coding startup Lovable raises $330M at a $6.6B valuation",
+        "link": "https://techcrunch.com/2025/12/18/vibe-coding-startup-lovable-raises-330m-at-a-6-6b-valuation/",
+        "published": "Thu, 18 Dec 2025 14:26:36 +0000",
+        "source": "TechCrunch",
+        "summary": "Lovable has seen its valuation more than triple just five months after the company's last funding round in July."
+    },
+    {
+        "id": "https://www.theverge.com/podcast/846750/decoder-mailbag-qa-nilay-patel-interview-2025",
+        "title": "\u2018All chaos and panic\u2019: Nilay\u00a0answers your burning Decoder questions",
+        "link": "https://www.theverge.com/podcast/846750/decoder-mailbag-qa-nilay-patel-interview-2025",
+        "published": "2025-12-18T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Welcome to our end-of-year Decoder special! Senior producers Kate Cox and Nick Statt here. We\u2019ve had a big year, including nearly 100 episodes, a new YouTube channel, an ad-free podcast feed, and a slate of great guest hosts while Nilay was on parental leave. It\u2019s been a lot. We\u2019ve also had a lot of great [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-linen-sheets/",
+        "title": "The Best Linen Sheets for Cool and Comfy Sleeping (2025)",
+        "link": "https://www.wired.com/gallery/best-linen-sheets/",
+        "published": "Thu, 18 Dec 2025 15:03:00 +0000",
+        "source": "WIRED",
+        "summary": "Linen might not be your first choice for bedsheets, but it\u2019s got enough benefits that it's worth a try. Here\u2019s the linen we love sleeping on."
+    },
+    {
+        "id": "https://www.wired.com/story/i-tested-t-mobile-15-minute-switch-carriers/",
+        "title": "T-Mobile Says You Can Switch in Just 15 Minutes. I Tested That Claim",
+        "link": "https://www.wired.com/story/i-tested-t-mobile-15-minute-switch-carriers/",
+        "published": "Thu, 18 Dec 2025 14:30:00 +0000",
+        "source": "WIRED",
+        "summary": "T-Mobile recently announced a new way to switch to the carrier in 15 minutes, and even get a new phone delivered on the same day. Here's what it's like."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/does-swearing-make-you-stronger-science-says-yes/",
+        "title": "Does swearing make you stronger? Science says yes.",
+        "link": "https://arstechnica.com/science/2025/12/does-swearing-make-you-stronger-science-says-yes/",
+        "published": "Thu, 18 Dec 2025 14:46:33 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"A calorie-neutral, drug-free, low-cost, readily available tool for when we need a boost in performance.\u201d"
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/formula-1-is-deploying-new-jargon-for-2026/",
+        "title": "Formula 1 is deploying new jargon for 2026",
+        "link": "https://arstechnica.com/cars/2025/12/formula-1-is-deploying-new-jargon-for-2026/",
+        "published": "Thu, 18 Dec 2025 13:52:45 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Forget DRS, now it's all about corner mode, straight mode, and overtake mode."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/meetups-new-mobile-app-is-designed-to-make-it-easier-to-meet-people-irl-150000920.html?src=rss",
+        "title": "Meetup's new mobile app is designed to make it easier to meet people IRL",
+        "link": "https://www.engadget.com/mobile/meetups-new-mobile-app-is-designed-to-make-it-easier-to-meet-people-irl-150000920.html?src=rss",
+        "published": "Thu, 18 Dec 2025 15:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're like me, it's probably been a hot minute since you\u2019ve used or even thought of Meetup. Predating both Facebook and Twitter, the website, which was designed to help people organize in-person events, has changed hands a handful of times in recent years.&nbsp;</p><p>In 2017, founder Scott Heiferman sold it to WeWork, which offloaded it a few years later before <a class=\"link\" href=\"https://www.engadget.com/wework-files-for-chapter-11-bankruptcy-protection-030708470.html\" target=\"_blank\""
+    },
+    {
+        "id": "https://www.zdnet.com/article/iphone-17-months-later-review/",
+        "title": "Why upgrading to the iPhone 17 after one year made sense for a casual user like me",
+        "link": "https://www.zdnet.com/article/iphone-17-months-later-review/",
+        "published": "Thu, 18 Dec 2025 15:04:00 GMT",
+        "source": "Latest news",
+        "summary": "The iPhone 17 may look exactly like its predecessor, but it features some of the Pro model's greatest hits, and that's enough to sell me on it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lenovo-thinkbook-x13-gen-4-review/",
+        "title": "Why I recommend this Lenovo laptop the most for business travel (and it's not a ThinkPad)",
+        "link": "https://www.zdnet.com/article/lenovo-thinkbook-x13-gen-4-review/",
+        "published": "Thu, 18 Dec 2025 14:57:00 GMT",
+        "source": "Latest news",
+        "summary": "The Lenovo ThinkBook 13x Gen 4 has a lightweight and durable form factor, with Magic Bay accessories that I can't stop thinking about."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ting-smart-sensor-review/",
+        "title": "I tested a tiny plug-in that promises to stop electrical fires - here's my buying advice now",
+        "link": "https://www.zdnet.com/article/ting-smart-sensor-review/",
+        "published": "Thu, 18 Dec 2025 14:52:00 GMT",
+        "source": "Latest news",
+        "summary": "The Ting Smart Sensor quietly monitors your home wiring for potential hazards. Here's how it fared in my house."
+    },
+    {
+        "id": "https://simonwillison.net/2025/Dec/18/code-proven-to-work/",
+        "title": "Your job is to deliver code you have proven to work",
+        "link": "https://simonwillison.net/2025/Dec/18/code-proven-to-work/",
+        "published": "Thu, 18 Dec 2025 14:52:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46313297\">Comments</a>"
+    },
+    {
+        "id": "http://pleasejusttryhtmx.com/",
+        "title": "Please Just Try Htmx",
+        "link": "http://pleasejusttryhtmx.com/",
+        "published": "Thu, 18 Dec 2025 14:18:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46312973\">Comments</a>"
+    },
+    {
+        "id": "https://daringfireball.net/linked/2025/12/17/are-apple-gift-cards-safe-to-redeem",
+        "title": "Are Apple gift cards safe to redeem?",
+        "link": "https://daringfireball.net/linked/2025/12/17/are-apple-gift-cards-safe-to-redeem",
+        "published": "Thu, 18 Dec 2025 14:26:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46313061\">Comments</a>"
     }
 ]
