--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -20062,5 +20062,181 @@
         "published": "Thu, 18 Dec 2025 14:26:57 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46313061\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/tech-provider-for-nhs-england-confirms-data-breach/",
+        "title": "Tech provider for NHS England confirms data breach",
+        "link": "https://techcrunch.com/2025/12/18/tech-provider-for-nhs-england-confirms-data-breach/",
+        "published": "Thu, 18 Dec 2025 16:09:34 +0000",
+        "source": "TechCrunch",
+        "summary": "U.K.-based healthcare tech provider DXS International said it discovered and contained a data breach on Sunday. A ransomware gang took credit for the breach."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/peripheral-labs-taps-into-self-driving-car-sensors-to-bring-sports-fans-right-into-the-game/",
+        "title": "Peripheral Labs taps into self-driving car sensors to bring sports fans right into the game",
+        "link": "https://techcrunch.com/2025/12/18/peripheral-labs-taps-into-self-driving-car-sensors-to-bring-sports-fans-right-into-the-game/",
+        "published": "Thu, 18 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The startup has raised a $3.6 million seed round led by Khosla Ventures."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/no-keynotes-no-bs-why-this-years-best-tech-talks-happened-over-cocktails-at-strictlyvc/",
+        "title": "No keynotes, no BS \u2014 why this year\u2019s best tech talks happened over cocktails at StrictlyVC",
+        "link": "https://techcrunch.com/2025/12/18/no-keynotes-no-bs-why-this-years-best-tech-talks-happened-over-cocktails-at-strictlyvc/",
+        "published": "Thu, 18 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Impactful talks and connections happen at StrictlyVC. Read the full 2025 recap and join the 2026 waitlist to get access to the lowest ticket prices."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/rivian-rolls-out-new-universal-hands-free-driving-feature/",
+        "title": "Rivian rolls out new \u2018Universal Hands-Free\u2019 driving feature",
+        "link": "https://techcrunch.com/2025/12/18/rivian-rolls-out-new-universal-hands-free-driving-feature/",
+        "published": "Thu, 18 Dec 2025 15:57:39 +0000",
+        "source": "TechCrunch",
+        "summary": "The driver assistance software is available on Rivian's for Gen 2 R1 cars and works on 3.5 million miles of North American roads. But it doesn't slow or stop for traffic lights or stop signs."
+    },
+    {
+        "id": "https://www.theverge.com/report/847056/microsoft-copilot-ai-vision-pc-assistant-christmas-holiday-ad",
+        "title": "Microsoft&#8217;s holiday Copilot ad is wrapped in empty promises",
+        "link": "https://www.theverge.com/report/847056/microsoft-copilot-ai-vision-pc-assistant-christmas-holiday-ad",
+        "published": "2025-12-18T10:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Microsoft is at it again with another round of ads showing people talking to Copilot AI on their computers. This time it's holiday-themed, including a cameo from the big man in red. The 30-second TV spot asks if you're \"ready for the holidays\" and features actors in various festive home settings asking Copilot for some [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/847344/micron-ram-memory-shortage-2026-earnings",
+        "title": "Micron says memory shortage will \u2018persist\u2019 beyond 2026",
+        "link": "https://www.theverge.com/news/847344/micron-ram-memory-shortage-2026-earnings",
+        "published": "2025-12-18T10:14:24-05:00",
+        "source": "The Verge",
+        "summary": "Micron, one of the three biggest memory suppliers in the world, forecasts rough months ahead for the global RAM supply. As part of its earnings report released on Wednesday, Micron CEO Sanjay Mehrotra said \"tight industry conditions\" across DRAM and NAND flash memory are expected to \"persist through and beyond\" 2026 as AI drives up [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/thuma-classic-bed-frame/",
+        "title": "Thuma Classic Bed Frame Review: Functional Meets Fabulous",
+        "link": "https://www.wired.com/review/thuma-classic-bed-frame/",
+        "published": "Thu, 18 Dec 2025 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "This fashionable favorite bed frame eliminates the need for tools during setup, instead using a Tetris-like stacking process"
+    },
+    {
+        "id": "https://gizmodo.com/rfk-jr-s-health-department-just-pulled-millions-in-funding-from-the-american-academy-of-pediatrics-2000701249",
+        "title": "RFK Jr.\u2019s Health Department Just Pulled Millions in Funding from the American Academy of Pediatrics",
+        "link": "https://gizmodo.com/rfk-jr-s-health-department-just-pulled-millions-in-funding-from-the-american-academy-of-pediatrics-2000701249",
+        "published": "Thu, 18 Dec 2025 16:00:56 +0000",
+        "source": "Gizmodo",
+        "summary": "The grants involved research studying autism and sudden infant deaths."
+    },
+    {
+        "id": "https://gizmodo.com/neon-genesis-evangelion-30th-anniversary-short-film-hideaki-anno-studio-khara-anime-2000701265",
+        "title": "\u2018Evangelion\u2019 Will Briefly Return Again for a New 30th Anniversary Short Film",
+        "link": "https://gizmodo.com/neon-genesis-evangelion-30th-anniversary-short-film-hideaki-anno-studio-khara-anime-2000701265",
+        "published": "Thu, 18 Dec 2025 15:30:37 +0000",
+        "source": "Gizmodo",
+        "summary": "The short animation, written by Hideaki Anno and helmed by 'Thrice Upon A Time' animation director Naoyuki Asano, will debut during a special three-day 'Evangelion' celebration in February 2026."
+    },
+    {
+        "id": "https://mashable.com/video/young-sherlock-teaser-trailer",
+        "title": "Young Sherlock teaser gives Arthur Conan Doyles detective an explosive origin story",
+        "link": "https://mashable.com/video/young-sherlock-teaser-trailer",
+        "published": "Thu, 18 Dec 2025 15:36:25 +0000",
+        "source": "Mashable",
+        "summary": "Who was Arthur Conan Doyle's detective as a youngster? That's what Guy Ritchie's Prime Video series \"Young Sherlock\" asks."
+    },
+    {
+        "id": "https://mashable.com/video/the-sheep-detectives-trailer",
+        "title": "The Sheep Detectives trailer is shear audacity and Im all in",
+        "link": "https://mashable.com/video/the-sheep-detectives-trailer",
+        "published": "Thu, 18 Dec 2025 15:31:12 +0000",
+        "source": "Mashable",
+        "summary": "Adapted by Craig Mazin (\"The Last of Us\") and \"Minions\" director Kyle Balda, \"The Sheep Detectives\" is a tale of mystery and animalian investigative practices, starring Hugh Jackman."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-dji-mic-mini-deal",
+        "title": "This creator-approved mic just reached its lowest price ever \u2014 shop at Amazon and save $90",
+        "link": "https://mashable.com/article/dec-18-dji-mic-mini-deal",
+        "published": "Thu, 18 Dec 2025 15:26:06 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, get the DJI Mic Mini for just $79. That saves you $90 off its list price. Shop now at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-monster-persona-headphones-deal",
+        "title": "Score a pair of Monster Persona headphones for their lowest price yet",
+        "link": "https://mashable.com/article/dec-18-monster-persona-headphones-deal",
+        "published": "Thu, 18 Dec 2025 15:21:15 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, get the Monster Persona headphones for their lowest price yet."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-airtags-deal",
+        "title": "Best price ever alert: A 4-pack of Apple AirTags just dropped to under $65",
+        "link": "https://mashable.com/article/dec-18-airtags-deal",
+        "published": "Thu, 18 Dec 2025 15:17:25 +0000",
+        "source": "Mashable",
+        "summary": "The Apple AirTag 4-pack is back on sale for $64.98, down from the list price of $99. That's a 34% discount."
+    },
+    {
+        "id": "https://readwrite.com/ho-chunk-nation-moves-to-block-kalshi-from-offering-contracts-during-ongoing-lawsuit/",
+        "title": "Ho-Chunk Nation moves to block Kalshi from offering contracts during ongoing lawsuit",
+        "link": "https://readwrite.com/ho-chunk-nation-moves-to-block-kalshi-from-offering-contracts-during-ongoing-lawsuit/",
+        "published": "Thu, 18 Dec 2025 14:33:42 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Green background with Kalshi logo in the middle in black. Judge denies injunction as California Tribes&#039; case against Kalshi falters. Federal judge denies Kalshi&#039;s motion to continue in Nevada\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/11/BF-16-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Due to the ongoing lawsuit, the Ho-Chunk Nation has moved to b"
+    },
+    {
+        "id": "https://www.zdnet.com/article/lenovo-loq-15ahp10-gaming-laptop-review/",
+        "title": "I didn't expect a gaming laptop to replace my work PC, but this Lenovo model did",
+        "link": "https://www.zdnet.com/article/lenovo-loq-15ahp10-gaming-laptop-review/",
+        "published": "Thu, 18 Dec 2025 16:02:00 GMT",
+        "source": "Latest news",
+        "summary": "Lenovo's LOQ 15AHP10 is a modest gaming laptop that offers reliable performance at an affordable price."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-reading-tablet/",
+        "title": "The best reading tablets of 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-reading-tablet/",
+        "published": "Thu, 18 Dec 2025 15:56:00 GMT",
+        "source": "Latest news",
+        "summary": "We rounded up the best reading tablets of the year for cozy fireside reading you can take with you anywhere."
+    },
+    {
+        "id": "https://www.zdnet.com/article/gifts-under-100/",
+        "title": "The 10 best last-minute tech gifts you can buy for under $100",
+        "link": "https://www.zdnet.com/article/gifts-under-100/",
+        "published": "Thu, 18 Dec 2025 15:54:00 GMT",
+        "source": "Latest news",
+        "summary": "You don't have to break the bank to gift tech. Check out these fun and affordable gadgets for $100 or less, plus learn how you can save on them."
+    },
+    {
+        "id": "https://www.zdnet.com/article/aloha-browser-chrome-alternative-for-android-mac/",
+        "title": "I found a worthy Chrome alternative for Android and Mac - and it has a built-in VPN",
+        "link": "https://www.zdnet.com/article/aloha-browser-chrome-alternative-for-android-mac/",
+        "published": "Thu, 18 Dec 2025 15:48:47 GMT",
+        "source": "Latest news",
+        "summary": "Want to ditch Chrome? The Aloha browser actually takes your privacy and security seriously. Here's how."
+    },
+    {
+        "id": "https://www.zdnet.com/article/gifts-under-25/",
+        "title": "The best last-minute cheap tech gifts you can buy for under $25",
+        "link": "https://www.zdnet.com/article/gifts-under-25/",
+        "published": "Thu, 18 Dec 2025 15:46:00 GMT",
+        "source": "Latest news",
+        "summary": "ZDNET found the best cheap tech gifts -- and deals -- for under $25, so you can save on gift-giving for everyone on your list this holiday season."
+    },
+    {
+        "id": "https://dl.acm.org/openaccess",
+        "title": "Beginning January 2026, all ACM publications will be made open access",
+        "link": "https://dl.acm.org/openaccess",
+        "published": "Thu, 18 Dec 2025 15:39:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46313991\">Comments</a>"
+    },
+    {
+        "id": "https://www.jack.bio/blog/licenseplate",
+        "title": "Using TypeScript to Obtain One of the Rarest License Plates",
+        "link": "https://www.jack.bio/blog/licenseplate",
+        "published": "Thu, 18 Dec 2025 15:00:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46313379\">Comments</a>"
     }
 ]
