📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -20390,5 +20390,149 @@
         "published": "Thu, 18 Dec 2025 15:35:52 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46313930\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/these-21-year-old-dropouts-raised-2m-to-build-givefront-a-fintech-for-nonprofits/",
+        "title": "These 21-year-old dropouts raised $2M to build Givefront, a fintech for nonprofits",
+        "link": "https://techcrunch.com/2025/12/18/these-21-year-old-dropouts-raised-2m-to-build-givefront-a-fintech-for-nonprofits/",
+        "published": "Thu, 18 Dec 2025 18:04:42 +0000",
+        "source": "TechCrunch",
+        "summary": "YC-backed Givefront is building a fintech designed specifically for nonprofits, including food banks, churches, and homeowner associations."
+    },
+    {
+        "id": "https://www.theverge.com/news/847539/riot-games-motherboard-security-flaw-pc-cheaters-anti-cheat",
+        "title": "Riot Games found a motherboard security flaw that helps PC cheaters",
+        "link": "https://www.theverge.com/news/847539/riot-games-motherboard-security-flaw-pc-cheaters-anti-cheat",
+        "published": "2025-12-18T13:01:51-05:00",
+        "source": "The Verge",
+        "summary": "Riot Games says a security flaw in many recent motherboards could be exploited by cheaters undetected, and now companies including Asrock, Asus, Gigabyte, and MSI have released BIOS updates to address the issue. According to Riot, \"had this issue gone unnoticed, it would have completely nullified all existing DMA detection and prevention tech currently on [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/the-ultra-realistic-ai-face-swapping-platform-driving-romance-scams/",
+        "title": "The Ultra-Realistic AI Face Swapping Platform Driving Romance Scams",
+        "link": "https://www.wired.com/story/the-ultra-realistic-ai-face-swapping-platform-driving-romance-scams/",
+        "published": "Thu, 18 Dec 2025 17:45:46 +0000",
+        "source": "WIRED",
+        "summary": "Capable of creating \u201cnearly perfect\u201d face swaps during live video chats, Hoatian has made millions, mainly via Telegram. But its main channel vanished after WIRED's inquiry into scammers using the app."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/trump-media-is-merging-with-a-google-backed-fusion-energy-company-in-a-deal-worth-6-billion-180910779.html?src=rss",
+        "title": "Trump Media is merging with a Google-backed fusion energy company in a deal worth $6 billion",
+        "link": "https://www.engadget.com/big-tech/trump-media-is-merging-with-a-google-backed-fusion-energy-company-in-a-deal-worth-6-billion-180910779.html?src=rss",
+        "published": "Thu, 18 Dec 2025 18:09:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Trump media, the company behind the president's personal social media platform Truth Social, is inexplicably merging with a Google-backed fusion energy company called TAE Technologies. The deal is worth $6 billion, <a href=\"https://www.ft.com/content/1e1978d5-535b-4241-872f-38db778df694?utm_social_post_id=626593619&amp;utm_social_handle_id=10977192\"><ins>according to reporting by </ins><em><ins>Financial Times</ins></em></a>.</p>\n<p>Why is an entity known for publishing frenzied hot takes by "
+    },
+    {
+        "id": "https://www.engadget.com/mobile/apple-opens-up-ios-in-japan-in-response-to-new-regulations-174854950.html?src=rss",
+        "title": "Apple opens up iOS in Japan in response to new regulations",
+        "link": "https://www.engadget.com/mobile/apple-opens-up-ios-in-japan-in-response-to-new-regulations-174854950.html?src=rss",
+        "published": "Thu, 18 Dec 2025 17:48:54 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You can add Japan to the list of regions where Apple has been forced to do something it would rather not: open up the App Store. On Thursday, the company <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=4130e2f0-a14f-4c5e-bdab-cd52ac7d8e79&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=5e3fd528-9ae3-4fa5-b524-acc88551b9d7&amp;featureId=text-link&amp;merchantName=Apple&amp;linkText=announced&amp;custData=eyJzb3VyY2VOYW1lIjoiV2ViLURlc2t0b3AtVmVy"
+    },
+    {
+        "id": "https://gizmodo.com/avengers-doomsday-teaser-online-countdown-russo-brothers-2000701364",
+        "title": "An \u2018Avengers: Doomsday\u2019 Teaser Is Online, But It\u2019s Not the One You Want",
+        "link": "https://gizmodo.com/avengers-doomsday-teaser-online-countdown-russo-brothers-2000701364",
+        "published": "Thu, 18 Dec 2025 18:13:34 +0000",
+        "source": "Gizmodo",
+        "summary": "The Russo Brothers released a short clip that isn't the more substantial video that should be in theaters soon."
+    },
+    {
+        "id": "https://gizmodo.com/trump-media-wants-to-become-a-nuclear-fusion-company-2000701354",
+        "title": "Trump Media Wants to Become a Nuclear Fusion Company",
+        "link": "https://gizmodo.com/trump-media-wants-to-become-a-nuclear-fusion-company-2000701354",
+        "published": "Thu, 18 Dec 2025 17:30:30 +0000",
+        "source": "Gizmodo",
+        "summary": "Trump Media just announced a $6 billion deal with an Alphabet-backed outfit that would create one of the first publicly traded fusion companies."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-jbl-flip-7-speaker-deal",
+        "title": "The JBL Flip 7 Bluetooth speaker is under $100 for the first time",
+        "link": "https://mashable.com/article/dec-18-jbl-flip-7-speaker-deal",
+        "published": "Thu, 18 Dec 2025 17:45:49 +0000",
+        "source": "Mashable",
+        "summary": "The JBL Flip 7 portable Bluetooth speaker is on sale at Amazon for only $99.95. That's 33% off and its lowest price on record."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-dji-power-1000-v2-deal",
+        "title": "Stay prepared with $70 off the DJI Power 1000 V2 portable power station",
+        "link": "https://mashable.com/article/dec-18-dji-power-1000-v2-deal",
+        "published": "Thu, 18 Dec 2025 17:39:55 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, save $70 on the DJI Power 1000 V2 portable power station at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-ecovacs-deebot-x11-deal",
+        "title": "Tidy up your home with the Ecovacs Deebot X11 for its lowest price yet",
+        "link": "https://mashable.com/article/dec-18-ecovacs-deebot-x11-deal",
+        "published": "Thu, 18 Dec 2025 17:36:16 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, get the Ecovacs Deebot X11 for its lowest price yet."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-shark-ai-ultra-deal",
+        "title": "Let the Shark AI Ultra robot vacuum clean your floors for under $250",
+        "link": "https://mashable.com/article/dec-18-shark-ai-ultra-deal",
+        "published": "Thu, 18 Dec 2025 17:29:54 +0000",
+        "source": "Mashable",
+        "summary": "The Shark AI Ultra robot vacuum is on sale at Amazon for $249.99, down from the normal price of $549.99. That's a 55% discount."
+    },
+    {
+        "id": "https://mashable.com/article/dec-18-apple-m4-mac-mini-deal",
+        "title": "The Apple M4 Mac Mini is back down to Black Friday price \u2014 order now and save $120",
+        "link": "https://mashable.com/article/dec-18-apple-m4-mac-mini-deal",
+        "published": "Thu, 18 Dec 2025 17:09:57 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 18, shop the Apple Mac Mini with M4 chip for just $479. That saves you $120 off its list price, bringing it back down to its Black Friday price."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-news-new-podcast-feature/",
+        "title": "Google will turn the news into a custom podcast for you - free",
+        "link": "https://www.zdnet.com/article/google-news-new-podcast-feature/",
+        "published": "Thu, 18 Dec 2025 18:12:17 GMT",
+        "source": "Latest news",
+        "summary": "You can now get your daily news from an AI-generated podcast roundup."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-galaxy-s25-ultra-vs-iphone-17-pro-max/",
+        "title": "iPhone 17 Pro Max vs. Samsung Galaxy S25 Ultra: I've used both phones, and this model wins",
+        "link": "https://www.zdnet.com/article/samsung-galaxy-s25-ultra-vs-iphone-17-pro-max/",
+        "published": "Thu, 18 Dec 2025 18:01:00 GMT",
+        "source": "Latest news",
+        "summary": "Which flagship phone should you buy in 2025? Here's how Apple and Samsung's top models stack up in time for the holiday season."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-qn90f-tv-review/",
+        "title": "This Samsung QLED model is the easiest TV for me to recommend in 2025 - here's why",
+        "link": "https://www.zdnet.com/article/samsung-qn90f-tv-review/",
+        "published": "Thu, 18 Dec 2025 17:25:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung's QN90F offers fantastic streaming and gaming performance, making it a compelling holiday deal."
+    },
+    {
+        "id": "https://claude.com/blog/organization-skills-and-directory",
+        "title": "Agent Skills is now an open standard",
+        "link": "https://claude.com/blog/organization-skills-and-directory",
+        "published": "Thu, 18 Dec 2025 17:04:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46315414\">Comments</a>"
+    },
+    {
+        "id": "https://entropicthoughts.com/mil-std-882e-software-control",
+        "title": "Military Standard on Software Control Levels",
+        "link": "https://entropicthoughts.com/mil-std-882e-software-control",
+        "published": "Thu, 18 Dec 2025 17:12:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46315547\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/18/1130140/take-our-quiz-on-the-year-in-health-and-biotechnology/",
+        "title": "Take our quiz on the year in health and biotechnology",
+        "link": "https://www.technologyreview.com/2025/12/18/1130140/take-our-quiz-on-the-year-in-health-and-biotechnology/",
+        "published": "Thu, 18 Dec 2025 16:59:02 +0000",
+        "source": "MIT Technology Review",
+        "summary": "In just a couple of weeks, we\u2019ll be bidding farewell to 2025. And what a year it has been! Artificial intelligence is being incorporated into more aspects of our lives, weight-loss drugs have expanded in scope, and there have been some real \u201comg\u201d biotech stories from the fields of gene therapy, IVF, neurotech, and more.&#160;&#160;&#160;&#8230;"
     }
 ]
