📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -20534,5 +20534,77 @@
         "published": "Thu, 18 Dec 2025 16:59:02 +0000",
         "source": "MIT Technology Review",
         "summary": "In just a couple of weeks, we\u2019ll be bidding farewell to 2025. And what a year it has been! Artificial intelligence is being incorporated into more aspects of our lives, weight-loss drugs have expanded in scope, and there have been some real \u201comg\u201d biotech stories from the fields of gene therapy, IVF, neurotech, and more.&#160;&#160;&#160;&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/18/linkedins-profile-verification-push-is-accelerating-and-india-is-leading-the-charge-in-2025/",
+        "title": "LinkedIn\u2019s profile verification push is accelerating \u2014 and India is leading the charge in 2025",
+        "link": "https://techcrunch.com/2025/12/18/linkedins-profile-verification-push-is-accelerating-and-india-is-leading-the-charge-in-2025/",
+        "published": "Thu, 18 Dec 2025 18:43:05 +0000",
+        "source": "TechCrunch",
+        "summary": "LinkedIn profile verification adoption in India has risen about 80% in the past 12 months."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/846378/best-last-minute-gifts-ideas-airpods-pro-deal-sale",
+        "title": "30 great gift ideas that should arrive in time for Christmas",
+        "link": "https://www.theverge.com/gadgets/846378/best-last-minute-gifts-ideas-airpods-pro-deal-sale",
+        "published": "2025-12-18T13:42:42-05:00",
+        "source": "The Verge",
+        "summary": "You don\u2019t need to deal with long mall lines or crowded parking lots just to wrap up your holiday shopping, but you probably already knew this. Some of the best deals are online, and even though Christmas is now just a few days away, a lot of Verge-approved gifts should still arrive on time if [&#8230;]"
+    },
+    {
+        "id": "https://gizmodo.com/unprecedented-image-shows-2-protoplanets-smashing-into-each-other-forming-giant-dust-cloud-2000701287",
+        "title": "Unprecedented Image Shows 2 Protoplanets Smashing Into Each Other, Forming Giant Dust Cloud",
+        "link": "https://gizmodo.com/unprecedented-image-shows-2-protoplanets-smashing-into-each-other-forming-giant-dust-cloud-2000701287",
+        "published": "Thu, 18 Dec 2025 19:00:05 +0000",
+        "source": "Gizmodo",
+        "summary": "First it was an exoplanet. Then it became a dust cloud. Now it's bringing a cosmic revelation."
+    },
+    {
+        "id": "https://gizmodo.com/feds-probe-instacarts-al-fueled-pricing-experiments-on-groceries-2000701379",
+        "title": "Feds Probe Instacart\u2019s Al-Fueled Pricing Experiments on Groceries",
+        "link": "https://gizmodo.com/feds-probe-instacarts-al-fueled-pricing-experiments-on-groceries-2000701379",
+        "published": "Thu, 18 Dec 2025 18:35:50 +0000",
+        "source": "Gizmodo",
+        "summary": "The price is wrong."
+    },
+    {
+        "id": "https://gizmodo.com/was-the-force-awakens-the-savior-of-star-wars-or-a-sacrifice-2000699725",
+        "title": "Was \u2018The Force Awakens\u2019 the Savior of \u2018Star Wars,\u2019 or a Sacrifice?",
+        "link": "https://gizmodo.com/was-the-force-awakens-the-savior-of-star-wars-or-a-sacrifice-2000699725",
+        "published": "Thu, 18 Dec 2025 18:30:04 +0000",
+        "source": "Gizmodo",
+        "summary": "It's hard to separate 'The Force Awakens' from everything that happened in its wake."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-google-pixel-watch-features-hidden/",
+        "title": "These 7 hidden Google Pixel Watch features that I can't live without (and how to access them)",
+        "link": "https://www.zdnet.com/article/best-google-pixel-watch-features-hidden/",
+        "published": "Thu, 18 Dec 2025 18:40:00 GMT",
+        "source": "Latest news",
+        "summary": "The Pixel Watch 4 introduces meaningful upgrades, with some features also available on earlier Pixel Watches."
+    },
+    {
+        "id": "https://www.zdnet.com/article/polar-loop-review/",
+        "title": "I replaced my Whoop with a new alternative that has no monthly fees - and it's legit",
+        "link": "https://www.zdnet.com/article/polar-loop-review/",
+        "published": "Thu, 18 Dec 2025 18:27:00 GMT",
+        "source": "Latest news",
+        "summary": "More brands are launching screenless trackers to keep you focused, not distracted. I tested the Polar Loop to see if it delivers."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-g4-vs-lg-g5/",
+        "title": "LG G5 vs. LG G4: I spent hours testing both OLED TVs, and this model was the surprise winner",
+        "link": "https://www.zdnet.com/article/lg-g4-vs-lg-g5/",
+        "published": "Thu, 18 Dec 2025 18:21:00 GMT",
+        "source": "Latest news",
+        "summary": "ZDNET experts tested and compared both versions of LG's flagship OLED TV to help you decide which is the best fit for you."
+    },
+    {
+        "id": "https://openai.com/index/introducing-gpt-5-2-codex/",
+        "title": "GPT-5.2-Codex",
+        "link": "https://openai.com/index/introducing-gpt-5-2-codex/",
+        "published": "Thu, 18 Dec 2025 18:14:48 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46316367\">Comments</a>"
     }
 ]
